force-app/main/default/objects/Subscription__c/fields/Originating_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Originating_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>