force-app/main/default/objects/Subscription__c/fields/Total_Recurring_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Recurring_Value__c</fullName>
    <label>Total Recurring Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>