force-app/main/default/objects/Subscription__c/validationRules/Cancellation_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Cancelled&quot;),
    ISBLANK(Cancellation_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Cancellation Reason is required when a subscription is cancelled.</errorMessage>
</ValidationRule>