force-app/main/default/objects/Subscription__c/validationRules/End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Start_Date__c)),
    NOT(ISBLANK(End_Date__c)),
    End_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be earlier than Start Date.</errorMessage>
</ValidationRule>